# nander-rs

./: .gitmodules  APPLICATION_USAGE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  build_errors.txt  build_output.txt  clippy_output.txt  release.ps1
.github/workflows/: publish.yml  rust.yml
docs/: BBT_DESIGN.md  EEPROM_USAGE.md  PERFORMANCE_OPTIMIZATION.md  TESTING_ROADMAP.md  TESTING_WITHOUT_CHIP.md  WCH_DEVICES.md  WINDOWS_DRIVER_FIX.md
src/: error.rs  lib.rs  main.rs
src/application/: batch.rs  diagnostics.rs  mod.rs
src/application/services/: mod.rs
src/application/use_cases/: detect_chip.rs  erase_flash.rs  mod.rs  read_flash.rs  status_flash.rs  verify_flash.rs  write_flash.rs
src/cli/: args.rs  commands.rs  mod.rs
src/database/: chips.rs  mod.rs
src/domain/: bad_block.rs  chip.rs  ecc.rs  flash_operation.rs  mod.rs  serial_analysis.rs  types.rs
src/flash/: mod.rs  nand.rs  nor.rs
src/hardware/: mod.rs
src/hardware/ch341a/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/chip_database/: mod.rs  registry.rs
src/infrastructure/chip_database/eeprom/: i2c_24cxx.rs  microwire_93cxx.rs  mod.rs  spi_25xxx.rs
src/infrastructure/chip_database/nand/: esmt.rs  etron.rs  foresee.rs  gigadevice.rs  macronix.rs  micron.rs  mod.rs  others.rs  toshiba.rs  winbond.rs  xtx.rs
src/infrastructure/chip_database/nor/: eon.rs  fram.rs  gigadevice.rs  macronix.rs  micron.rs  mod.rs  others.rs  spansion.rs  winbond.rs
src/infrastructure/flash_protocol/: commands.rs  mod.rs
src/infrastructure/flash_protocol/eeprom/: i2c_24cxx.rs  microwire_93cxx.rs  mod.rs  spi_25xxx.rs
src/infrastructure/flash_protocol/nand/: mod.rs  tests.rs
src/infrastructure/flash_protocol/nor/: mod.rs  tests.rs
src/infrastructure/programmer/: device_database.rs  mock.rs  mod.rs  simulator.rs  traits.rs
src/infrastructure/programmer/ch341a/: mod.rs  protocol.rs
src/infrastructure/programmer/ch347/: mod.rs  protocol.rs
src/infrastructure/programmer/ftdi/: mod.rs  mpsse.rs
src/infrastructure/programmer/serial/: ch340.rs  ch347.rs  mod.rs
src/infrastructure/programmer/spidev/: mod.rs
src/presentation/: mod.rs
src/presentation/cli/: args.rs  mod.rs
src/presentation/cli/handlers/: bbt_handler.rs  erase_handler.rs  info_handler.rs  list_handler.rs  mod.rs  passthrough_handler.rs  protect_handler.rs  read_handler.rs  verify_handler.rs  write_handler.rs
src/presentation/gui/: app.rs  messages.rs  mod.rs  worker.rs
tests/: e2e_nand.rs
