[package]
name = "nander-rs"
version = "0.5.2"
edition = "2021"
rust-version = "1.87"
authors = ["driezy <shisoratsu@icloud.com>"]
description = "Modern SPI NAND/NOR Flash programmer for CH341A with cross-platform GUI and comprehensive diagnostics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tinnci/nander-rs"
documentation = "https://docs.rs/nander-rs"
homepage = "https://github.com/tinnci/nander-rs"
readme = "README.md"
keywords = ["flash", "spi", "nand", "programmer", "ch341a"]
categories = ["embedded", "hardware-support", "command-line-utilities"]
exclude = ["docs/*", "*.txt", ".github/*", "build_errors.txt"]

[dependencies]
# USB communication (pure Rust, no libusb needed)
nusb = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Progress bar
indicatif = "0.17"
colored = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for nusb)
futures-lite = "2"

# Hex encoding for debugging
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.8"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
chrono = "0.4.42"
rfd = "0.15"

[[bin]]
name = "nander"
path = "src/main.rs"

[dev-dependencies]
# Mocking framework for unit tests
mockall = "0.13"

# Tempfile for test file operations
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

